@@ -1,28 +1,10 @@
 {
-  "timestamp" : "2025-06-01T01:16:13Z",
-  "count_outdated" : 533,
-  "uniques_outdated" : 360,
+  "timestamp" : "2025-06-03T01:05:05Z",
+  "count_outdated" : 538,
+  "uniques_outdated" : 364,
   "count" : 541,
   "uniques" : 367,
   "clones" : [
-    {
-      "timestamp": "2025-05-19T00:00:00Z",
-      "count": 4,
-      "count_minmax": [ 4, 4 ],
-      "count_decinc": [ 0, 4 ],
-      "uniques": 3,
-      "uniques_minmax": [ 3, 3 ],
-      "uniques_decinc": [ 0, 3 ]
-    },
-    {
-      "timestamp": "2025-05-20T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-05-24T00:00:00Z",
       "count": 1,
