@@ -1,17 +1,7 @@
 {
-  "count": 8,
-  "uniques": 7,
+  "count": 3,
+  "uniques": 3,
   "clones": [
-    {
-      "timestamp": "2025-05-19T00:00:00Z",
-      "count": 4,
-      "uniques": 3
-    },
-    {
-      "timestamp": "2025-05-20T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-05-24T00:00:00Z",
       "count": 1,
